# garden-path

./: .gitignore  FINDINGS.md  LICENSE  README.md  compile_datasets.py  compile_derived.py  compute_derived_surprisal.py  compute_layer_ablation.py  compute_prepend.py  compute_selectivity.py  compute_selfprime.py  compute_surprise.py  gps.py  plot_layer_ablation.py  plot_metrics.py  plot_parse_tree.py  pyproject.toml  run_selectivity.sh  theme.py
data/: compiled.json  data.json  derived.json
