[project]
name = "garden-path"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0,<2.6",
    "transformers>=4.46,<4.48",
    "accelerate>=0.26,<0.35",
    "bitsandbytes>=0.43,<0.45",
    "huggingface-hub>=0.23,<0.28",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "colorama>=0.4",
    "protobuf>=3.20",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
